--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,7 @@ streamcatcher = "1.0.1"
 symphonia-core = "0.5.2"
 lazy_static = "1.4.0"
 reqwest = "0.11.17"
+sys-info = "0.9.1"
+chrono = "0.4.24"
+dotenvy = "0.15.7"
+openai = "1.0.0-alpha.8"
