--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ imggenerator/cuda-repo-wsl-ubuntu-12-1-local_12.1.1-1_amd64.deb
 imggenerator/cudnn-local-repo-ubuntu2004-8.9.1.23_1.0-1_amd64.deb
 imggenerator/node_modules/
 imggenerator/Miniconda3-latest-Linux-x86_64.sh
+*.wav
+artificialintelligence/gen_pics/
+artificialintelligence/node_modules/
