TRANSCRIBED AUDIO WORKSgit add .!

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@ imggenerator/Miniconda3-latest-Linux-x86_64.sh
 *.wav
 artificialintelligence/gen_pics/
 artificialintelligence/node_modules/
+--Frag1194
+--Frag1
