--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,6 @@ artificialintelligence/gen_pics/
 artificialintelligence/node_modules/
 --Frag1194
 --Frag1
+*.mp4
+*.mp3
+voicesynthesizeauthserver/node_modules/
